address CR comments